--- a/OCT 2020/Recipe App/index.html
+++ b/OCT 2020/Recipe App/index.html
@@ -6,8 +6,46 @@
     <title>Recipe App</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" async></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
-    <h1>Hello Poppers</h1>
+    <section>
+        <div class="container">
+                <h2 class="brand">Recipe App</h2>
+                <form>
+                    <input type="text" class="form-input" placeholder="Search Your Recipe...">
+                    <a href="#" id="ion-icon-btn"><ion-icon name="search-outline"></ion-icon></a>
+                </form>
+                <div class="search-result">
+                    <!-- <div class="item">
+                        <img src="placeholder.jpg" alt="">
+                        <div class="flex-container">
+                            <h1 class="title">This is a recipe</h1>
+                            <a href="#" class="view-button">View Recipe</a>
+                        </div>
+                        <p class="item-data">Calories: 120</p>
+                    </div>
+                    <div class="item">
+                        <img src="placeholder.jpg" alt="">
+                        <div class="flex-container">
+                            <h1 class="title">This is a recipe</h1>
+                            <a href="#" class="view-button">View Recipe</a>
+                        </div>
+                        <p class="item-data">Calories: 120</p>
+                    </div>
+                    <div class="item">
+                        <img src="placeholder.jpg" alt="">
+                        <div class="flex-container">
+                            <h1 class="title">This is a recipe</h1>
+                            <a href="#" class="view-button">View Recipe</a>
+                        </div>
+                        <p class="item-data">Calories: 120</p>
+                    </div> -->
+                </div>
+        </div>
+    </section>
+    
+
 </body>
 </html>
